--- a/client/admin-login.html
+++ b/client/admin-login.html
@@ -20,7 +20,7 @@ function adminLogin() {
   const username = document.getElementById("username").value;
   const password = document.getElementById("password").value;
 
-  fetch("http://localhost:5000/api/admin/login", {
+  fetch("https://employee-policy-system.onrender.com/api/admin/login", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ username, password })
