Updated changes in version 1

--- a/client/admin-dashboard.html
+++ b/client/admin-dashboard.html
@@ -5,89 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f4f6f9;
-    }
-
-    .navbar {
-      background: #667eea;
-      padding: 15px;
-      color: white;
-      text-align: center;
-      font-size: 18px;
-      font-weight: bold;
-    }
-
-    .container {
-      padding: 30px;
-    }
-
-    .card {
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-      margin-bottom: 20px;
-    }
-
-    input {
-      padding: 8px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      margin: 5px 5px 5px 0;
-    }
-
-    button {
-      padding: 8px 15px;
-      border: none;
-      border-radius: 6px;
-      background: #667eea;
-      color: white;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background: #5a67d8;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 15px;
-    }
-
-    th, td {
-      padding: 10px;
-      border-bottom: 1px solid #ddd;
-      text-align: center;
-    }
-
-    th {
-      background: #667eea;
-      color: white;
-    }
-
-    .logout {
-      background: red;
-      margin-top: 15px;
-    }
-
-    .search-box {
-      margin-bottom: 10px;
-    }
+    body { margin: 0; font-family: Arial, sans-serif; background: #f4f6f9; }
+    .navbar { background: #667eea; padding: 15px; color: white; text-align: center; font-size: 18px; font-weight: bold; }
+    .container { padding: 30px; }
+    .card { background: white; padding: 20px; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); margin-bottom: 20px; }
+    input { padding: 8px; border-radius: 6px; border: 1px solid #ccc; margin: 5px 5px 5px 0; }
+    button { padding: 8px 15px; border: none; border-radius: 6px; background: #667eea; color: white; cursor: pointer; }
+    button:hover { background: #5a67d8; }
+    table { width: 100%; border-collapse: collapse; margin-top: 15px; }
+    th, td { padding: 10px; border-bottom: 1px solid #ddd; text-align: center; }
+    th { background: #667eea; color: white; }
+    .logout { background: red; margin-top: 15px; }
+    .search-box { margin-bottom: 10px; }
   </style>
 </head>
 <body>
 
-<div class="navbar">
-  Admin Dashboard
-</div>
-
+<div class="navbar">Admin Dashboard</div>
 <div class="container">
 
-  <!-- Create Employee -->
   <div class="card">
     <h3>Create Employee</h3>
     <input type="text" id="name" placeholder="Enter Name">
@@ -95,14 +31,9 @@
     <button onclick="createEmployee()">Create</button>
   </div>
 
-  <!-- Employee List -->
   <div class="card">
     <h3>Employee List</h3>
-
-    <input type="text" id="search" class="search-box"
-           placeholder="Search by name or phone"
-           onkeyup="searchUser()">
-
+    <input type="text" id="search" class="search-box" placeholder="Search by name or phone" onkeyup="searchUser()">
     <table id="employeeTable">
       <thead>
         <tr>
@@ -114,7 +45,6 @@
       </thead>
       <tbody></tbody>
     </table>
-
     <button class="logout" onclick="logout()">Logout</button>
   </div>
 
@@ -124,7 +54,6 @@
 const token = localStorage.getItem("adminToken");
 if (!token) window.location.href = "index.html";
 
-// Helper: sanitize phone number
 const sanitizePhone = (phone) => phone.replace(/\D/g, "");
 
 function fetchEmployees() {
@@ -135,8 +64,7 @@ function fetchEmployees() {
   .then(data => {
     const tbody = document.querySelector("#employeeTable tbody");
     tbody.innerHTML = "";
-
-    const employees = data.employees || []; // <-- important
+    const employees = data.employees || []; // ✅ important
 
     employees.forEach(emp => {
       tbody.innerHTML += `
@@ -144,9 +72,7 @@ function fetchEmployees() {
           <td>${emp.name || "N/A"}</td>
           <td>${emp.phone || "N/A"}</td>
           <td>${emp.hasSignedPolicy ? "Agreed" : "Pending"}</td>
-          <td>
-            <button onclick="deleteEmployee('${emp._id}')">Delete</button>
-          </td>
+          <td><button onclick="deleteEmployee('${emp._id}')">Delete</button></td>
         </tr>
       `;
     });
@@ -154,8 +80,6 @@ function fetchEmployees() {
   .catch(err => console.error("Fetch Employees Error:", err));
 }
 
-
-// Create a new employee
 function createEmployee() {
   const name = document.getElementById("name").value.trim();
   const phone = sanitizePhone(document.getElementById("phone").value);
@@ -167,48 +91,30 @@ function createEmployee() {
 
   fetch("https://employee-policy-system.onrender.com/api/admin/create-employee", {
     method: "POST",
-    headers: {
-      "Content-Type": "application/json",
-      Authorization: `Bearer ${token}`
-    },
+    headers: { "Content-Type": "application/json", Authorization: `Bearer ${token}` },
     body: JSON.stringify({ name, phone })
   })
   .then(res => res.json())
-  .then(data => {
-    alert(data.message);
-    document.getElementById("name").value = "";
-    document.getElementById("phone").value = "";
-    fetchEmployees();
-  })
+  .then(data => { alert(data.message); fetchEmployees(); })
   .catch(err => console.error("Create Employee Error:", err));
 }
 
-// Delete an employee
 function deleteEmployee(id) {
   fetch(`https://employee-policy-system.onrender.com/api/admin/delete-employee/${id}`, {
     method: "DELETE",
     headers: { Authorization: `Bearer ${token}` }
   })
   .then(res => res.json())
-  .then(data => {
-    alert(data.message);
-    fetchEmployees();
-  })
+  .then(data => { alert(data.message); fetchEmployees(); })
   .catch(err => console.error("Delete Employee Error:", err));
 }
 
-// Search/filter employees
 function searchUser() {
   const value = document.getElementById("search").value.toLowerCase();
   const rows = document.querySelectorAll("#employeeTable tbody tr");
-
-  rows.forEach(row => {
-    row.style.display =
-      row.innerText.toLowerCase().includes(value) ? "" : "none";
-  });
+  rows.forEach(row => { row.style.display = row.innerText.toLowerCase().includes(value) ? "" : "none"; });
 }
 
-// Logout
 function logout() {
   localStorage.removeItem("adminToken");
   window.location.href = "index.html";
