--- a/client/policy.html
+++ b/client/policy.html
@@ -1,85 +1,140 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Employee Dashboard</title>
+  <meta charset="UTF-8">
+  <title>Employee Dashboard - Policy Agreement</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
       margin: 0;
-      font-family: Arial;
-      background: #f4f6f9;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
     }
 
     .card {
       background: white;
-      padding: 30px;
-      border-radius: 12px;
-      width: 400px;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.15);
+      padding: 40px;
+      border-radius: 16px;
+      width: 100%;
+      max-width: 400px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
       text-align: center;
     }
 
+    h2 { color: #2d3748; margin-bottom: 10px; }
+    p { color: #718096; margin-bottom: 25px; font-size: 14px; }
+
+    .radio-group {
+      display: flex;
+      justify-content: space-around;
+      margin-bottom: 20px;
+      background: #f7fafc;
+      padding: 15px;
+      border-radius: 10px;
+    }
+
+    label {
+      font-weight: 600;
+      color: #4a5568;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
     button {
-      padding: 10px;
+      padding: 12px;
       border: none;
       border-radius: 8px;
       background: #667eea;
       color: white;
       cursor: pointer;
       width: 100%;
-      margin-top: 15px;
+      font-weight: bold;
+      font-size: 16px;
+      transition: transform 0.2s, background 0.2s;
     }
 
-    button:hover {
-      background: #5a67d8;
-    }
+    button:hover { background: #5a67d8; transform: translateY(-1px); }
+    button:disabled { background: #a0aec0; cursor: not-allowed; }
+
+    #loading { display: none; color: #667eea; margin-top: 10px; font-size: 14px; }
   </style>
 </head>
 <body>
+
 <div class="card">
   <h2>Company Policy</h2>
+  <p>Please review and acknowledge our updated company policy below.</p>
 
-  <label>
-    <input type="radio" name="policy" value="agreed"> Agree
-  </label>
+  <div class="radio-group">
+    <label>
+      <input type="radio" name="policy" value="agreed"> Agree
+    </label>
+    <label>
+      <input type="radio" name="policy" value="disagreed"> Disagree
+    </label>
+  </div>
 
-  <label>
-    <input type="radio" name="policy" value="disagreed"> Disagree
-  </label>
-
-  <button onclick="submitPolicy()">Submit</button>
+  <button id="submitBtn" onclick="submitPolicy()">Submit Decision</button>
+  <div id="loading">Processing...</div>
 </div>
 
 <script>
-const token = localStorage.getItem("employeeToken");
-
-function submitPolicy() {
-  const selected = document.querySelector('input[name="policy"]:checked');
-
-  if (!selected) {
-    alert("Please select option");
-    return;
+  // 1. Auth Check - Run immediately
+  const token = localStorage.getItem("employeeToken");
+  if (!token) {
+    alert("Session expired. Please log in again.");
+    window.location.href = "login.html"; // Ensure this matches your login page filename
   }
 
-  fetch("https://employee-policy-system.onrender.com/api/employee/submit-policy", {
-    method: "POST",
-    headers: {
-      Authorization: token,
-      "Content-Type": "application/json"
-    },
-    body: JSON.stringify({ status: selected.value })
-  })
-  .then(res => res.json())
-  .then(data => {
-    alert(data.message);
-    window.location.href = "success.html";
-  });
-}
-</script>
+  async function submitPolicy() {
+    const selected = document.querySelector('input[name="policy"]:checked');
+    const btn = document.getElementById("submitBtn");
+    const loader = document.getElementById("loading");
 
+    if (!selected) {
+      alert("Please select an option before submitting.");
+      return;
+    }
+
+    // UI Feedback
+    btn.disabled = true;
+    loader.style.display = "block";
+
+    try {
+      const response = await fetch("https://employee-policy-system.onrender.com/api/employee/submit-policy", {
+        method: "POST",
+        headers: {
+          "Authorization": token, // Matches your strict middleware requirement
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ status: selected.value })
+      });
+
+      const data = await response.json();
+
+      if (response.ok) {
+        alert(data.message || "Thank you for your response!");
+        window.location.href = "success.html";
+      } else {
+        // Handle logic errors (e.g., token expired while on page)
+        alert(data.message || "Submission failed. Please log in again.");
+        if (response.status === 401) window.location.href = "login.html";
+      }
+    } catch (error) {
+      console.error("Submission Error:", error);
+      alert("Unable to connect to the server. Please check your internet.");
+    } finally {
+      btn.disabled = false;
+      loader.style.display = "none";
+    }
+  }
+</script>
 
 </body>
 </html>
