--- a/client/policy.html
+++ b/client/policy.html
@@ -57,10 +57,25 @@
       font-weight: bold;
       font-size: 16px;
       transition: transform 0.2s, background 0.2s;
+      margin-bottom: 10px;
     }
 
     button:hover { background: #5a67d8; transform: translateY(-1px); }
-    button:disabled { background: #a0aec0; cursor: not-allowed; }
+    
+    /* Logout button style */
+    .btn-logout {
+      background: transparent;
+      color: #718096;
+      border: 1px solid #cbd5e0;
+      font-size: 14px;
+      margin-top: 15px;
+    }
+    
+    .btn-logout:hover {
+      background: #fff5f5;
+      color: #c53030;
+      border-color: #feb2b2;
+    }
 
     #loading { display: none; color: #667eea; margin-top: 10px; font-size: 14px; }
   </style>
@@ -81,15 +96,22 @@
   </div>
 
   <button id="submitBtn" onclick="submitPolicy()">Submit Decision</button>
+  
+  <button class="btn-logout" onclick="logout()">Logout</button>
+  
   <div id="loading">Processing...</div>
 </div>
 
 <script>
-  // 1. Auth Check - Run immediately
   const token = localStorage.getItem("employeeToken");
   if (!token) {
-    alert("Session expired. Please log in again.");
-    window.location.href = "login.html"; // Ensure this matches your login page filename
+    window.location.href = "index.html"; 
+  }
+
+  // Logout Function
+  function logout() {
+    localStorage.removeItem("employeeToken");
+    window.location.href = "index.html";
   }
 
   async function submitPolicy() {
@@ -102,7 +124,6 @@
       return;
     }
 
-    // UI Feedback
     btn.disabled = true;
     loader.style.display = "block";
 
@@ -110,25 +131,29 @@
       const response = await fetch("https://employee-policy-system.onrender.com/api/employee/submit-policy", {
         method: "POST",
         headers: {
-          "Authorization": token, // Matches your strict middleware requirement
+          "Authorization": token, 
           "Content-Type": "application/json"
         },
         body: JSON.stringify({ status: selected.value })
       });
 
-      const data = await response.json();
+      const contentType = response.headers.get("content-type");
+      let data;
+
+      if (contentType && contentType.includes("application/json")) {
+        data = await response.json();
+      } else {
+        throw new Error("Invalid server response.");
+      }
 
       if (response.ok) {
-        alert(data.message || "Thank you for your response!");
+        alert(data.message);
         window.location.href = "success.html";
       } else {
-        // Handle logic errors (e.g., token expired while on page)
-        alert(data.message || "Submission failed. Please log in again.");
-        if (response.status === 401) window.location.href = "login.html";
+        alert(data.message || "Error: " + response.status);
       }
     } catch (error) {
-      console.error("Submission Error:", error);
-      alert("Unable to connect to the server. Please check your internet.");
+      alert("Unable to connect to the server.");
     } finally {
       btn.disabled = false;
       loader.style.display = "none";
