--- a/client/index.html
+++ b/client/index.html
@@ -3,144 +3,79 @@
 <head>
   <title>Employee Policy System</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #667eea, #764ba2);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    .container {
-      background: white;
-      padding: 40px;
-      border-radius: 15px;
-      width: 350px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-      text-align: center;
-    }
-
-    h2 {
-      margin-bottom: 20px;
-      color: #333;
-    }
-
-    input {
-      width: 100%;
-      padding: 10px;
-      margin: 8px 0;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      outline: none;
-    }
-
-    input:focus {
-      border-color: #667eea;
-    }
-
-    button {
-      width: 100%;
-      padding: 10px;
-      border: none;
-      border-radius: 8px;
-      background: #667eea;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      margin-top: 10px;
-      transition: 0.3s;
-    }
-
-    button:hover {
-      background: #5a67d8;
-    }
-
-    .toggle-btn {
-      background: transparent;
-      color: #667eea;
-      margin-top: 15px;
-      font-size: 14px;
-    }
-
-    .hidden {
-      display: none;
-    }
-
-    #adminError {
-      color: red;
-      font-size: 14px;
-    }
+    body { margin: 0; font-family: Arial, sans-serif; background: linear-gradient(135deg, #667eea, #764ba2); display: flex; justify-content: center; align-items: center; height: 100vh; }
+    .container { background: white; padding: 40px; border-radius: 15px; width: 350px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); text-align: center; }
+    input { width: 100%; padding: 10px; margin: 8px 0; border-radius: 8px; border: 1px solid #ccc; box-sizing: border-box; }
+    button { width: 100%; padding: 10px; border: none; border-radius: 8px; background: #667eea; color: white; font-weight: bold; cursor: pointer; margin-top: 10px; }
+    button:disabled { background: #ccc; cursor: not-allowed; }
+    .toggle-btn { background: transparent; color: #667eea; margin-top: 15px; font-size: 14px; }
+    .hidden { display: none; }
+    #timerText { color: #667eea; font-weight: bold; font-size: 14px; margin: 5px 0; display: none; }
   </style>
 </head>
 <body>
 
 <div class="container">
+  <h2>Employee Login</h2>
+  <div id="employeeSection">
+    <input type="text" id="phone" placeholder="Enter Mobile Number">
+    <button id="otpBtn" onclick="sendOTP()">Send OTP</button>
+    <p id="timerText">Resend in <span id="seconds">60</span>s</p>
+    <input type="text" id="otp" placeholder="Enter OTP">
+    <button onclick="verifyOTP()">Verify OTP</button>
+    <button class="toggle-btn" onclick="showAdmin()">Login as Admin</button>
+  </div>
 
-<h2>Employee Policy System</h2>
-
-<div id="employeeSection">
-
-  <input type="text" id="phone" placeholder="Enter Mobile Number">
-  <button onclick="sendOTP()">Send OTP</button>
-
-  <input type="text" id="otp" placeholder="Enter OTP">
-  <button onclick="verifyOTP()">Verify OTP</button>
-
-  <button class="toggle-btn" onclick="showAdmin()">
-    Login as Admin
-  </button>
-
-</div>
-
-<div id="adminSection" class="hidden">
-
-  <input type="text" id="adminUsername" placeholder="Admin Username">
-  <input type="password" id="adminPassword" placeholder="Admin Password">
-  <button onclick="adminLogin()">Login</button>
-
-  <p id="adminError"></p>
-
-  <button class="toggle-btn" onclick="showEmployee()">
-    Back to Employee Login
-  </button>
-
-</div>
-
+  <div id="adminSection" class="hidden">
+    <input type="text" id="adminUsername" placeholder="Admin Username">
+    <input type="password" id="adminPassword" placeholder="Admin Password">
+    <button onclick="adminLogin()">Login</button>
+    <p id="adminError" style="color:red"></p>
+    <button class="toggle-btn" onclick="showEmployee()">Back to Employee</button>
+  </div>
 </div>
 
 <script>
 let savedPhone = "";
+let countdown;
 
-function showAdmin() {
-  document.getElementById("adminSection").classList.remove("hidden");
-  document.getElementById("employeeSection").classList.add("hidden");
-}
-
-function showEmployee() {
-  document.getElementById("employeeSection").classList.remove("hidden");
-  document.getElementById("adminSection").classList.add("hidden");
+function startTimer() {
+  const btn = document.getElementById("otpBtn");
+  const timerText = document.getElementById("timerText");
+  const secondsSpan = document.getElementById("seconds");
+  let timeLeft = 60;
+  btn.disabled = true;
+  timerText.style.display = "block";
+  countdown = setInterval(() => {
+    timeLeft--;
+    secondsSpan.innerText = timeLeft;
+    if (timeLeft <= 0) {
+      clearInterval(countdown);
+      btn.disabled = false;
+      timerText.style.display = "none";
+    }
+  }, 1000);
 }
 
 function sendOTP() {
   const phone = document.getElementById("phone").value;
+  if(!phone) return alert("Enter phone number");
   savedPhone = phone;
-
   fetch("https://employee-policy-system.onrender.com/api/employee/send-otp", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ phone })
   })
   .then(res => res.json())
-  .then(data => alert(data.message));
+  .then(data => {
+    alert(data.message);
+    if(data.message.includes("Successfully")) startTimer();
+  });
 }
 
 function verifyOTP() {
   const otp = document.getElementById("otp").value;
-
   fetch("https://employee-policy-system.onrender.com/api/employee/verify-otp", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
@@ -151,32 +86,12 @@ function verifyOTP() {
     if (data.token) {
       localStorage.setItem("employeeToken", data.token);
       window.location.href = "policy.html";
-    } else {
-      alert(data.message);
-    }
+    } else alert(data.message);
   });
 }
 
-function adminLogin() {
-  const username = document.getElementById("adminUsername").value;
-  const password = document.getElementById("adminPassword").value;
-
-  fetch("https://employee-policy-system.onrender.com/api/admin/login", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ username, password })
-  })
-  .then(res => res.json())
-  .then(data => {
-    if (data.token) {
-      localStorage.setItem("adminToken", data.token);
-      window.location.href = "admin-dashboard.html";
-    } else {
-      document.getElementById("adminError").innerText = data.message;
-    }
-  });
-}
+function showAdmin() { document.getElementById("adminSection").classList.remove("hidden"); document.getElementById("employeeSection").classList.add("hidden"); }
+function showEmployee() { document.getElementById("employeeSection").classList.remove("hidden"); document.getElementById("adminSection").classList.add("hidden"); }
 </script>
-
 </body>
 </html>
